@@ -1,0 +1,7 @@
+==============================
+Lint — a validation middleware
+==============================
+
+.. automodule:: werkzeug.contrib.lint
+
+.. autoclass:: LintMiddleware
