@@ -640,14 +640,22 @@ def is_resource_modified(environ, etag=None, data=None, last_modified=None):
     return not unmodified
 
 
-def remove_entity_headers(headers):
+def remove_entity_headers(headers, allowed=('expires', 'content-location')):
     """Remove all entity headers from a list or :class:`Headers` object.  This
-    operation works in-place.
+    operation works in-place.  `Expires` and `Content-Location` headers are
+    by default not removed.  The reason for this is :rfc:`2616` section
+    10.3.5 which specifies some entity headers that should be sent.
+
+    .. versionchanged:: 0.5
+       added `allowed` parameter.
 
     :param headers: a list or :class:`Headers` object.
+    :param allowed: a list of headers that should still be allowed even though
+                    they are entity headers.
     """
+    allowed = set(x.lower() for x in allowed)
     headers[:] = [(key, value) for key, value in headers if
-                  not is_entity_header(key)]
+                  not is_entity_header(key) or key.lower() in allowed]
 
 
 def remove_hop_by_hop_headers(headers):
